Blender crashes when the particle system is turned off in particle editing mode #63788

Closed
opened 2019-04-22 00:46:59 +02:00 by Michael Soluyanov · 7 comments

System Information
Operating system: Linux-4.15.0-47-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-21 09:39, hash: c8fc23fdbe

Short description of error
Blender crashes when the particle system is turned off in particle editing mode. The specific configuration of particle systems cause this error, I tried to create a simpler example, but without success.

Exact steps for others to reproduce the error
hairtest.blend

  1. Open file.
  2. Switch to particle edit mode
  3. Disable first particle system in modifier stack - Blender shuts down immediately
**System Information** Operating system: Linux-4.15.0-47-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-21 09:39, hash: `c8fc23fdbe` **Short description of error** Blender crashes when the particle system is turned off in particle editing mode. The specific configuration of particle systems cause this error, I tried to create a simpler example, but without success. **Exact steps for others to reproduce the error** [hairtest.blend](https://archive.blender.org/developer/F6965249/hairtest.blend) 1. Open file. 2. Switch to particle edit mode 3. Disable first particle system in modifier stack - Blender shuts down immediately
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

#65246 was marked as duplicate of this issue

#65246 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-04-25 14:35:12 +02:00
Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555557c84609 in psys_cache_vgroup (mesh=0x0, psys=0x7fffd55e1008, vgroup=2) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2203
2203	    MDeformVert *dvert = mesh->dvert;
(gdb) bt
- 0  0x0000555557c84609 in psys_cache_vgroup (mesh=0x0, psys=0x7fffd55e1008, vgroup=2) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2203
- 1  0x0000555557c84e6a in psys_thread_context_init_path (ctx=0x7fffffffce80, sim=0x7fffffffd090, scene=0x7fffcd350008, cfra=1, editupdate=true, use_render_params=false)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2345
#2  0x0000555557c867cc in psys_cache_child_paths (sim=0x7fffffffd090, cfra=1, editupdate=true, use_render_params=false)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2757
#3  0x0000555557c88c30 in psys_cache_edit_paths (depsgraph=0x7fffcde2b408, scene=0x7fffcd350008, ob=0x7fffd58ad608, edit=0x7fffd27e0708, cfra=1,
    use_render_params=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:3333
#4  0x0000555558ac290e in PE_update_object (depsgraph=0x7fffcde2b408, scene=0x7fffcd350008, ob=0x7fffd58ad608, useflag=0)
    at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:1612
#5  0x000055555873eef8 in drw_particle_update_ptcache_edit (object_eval=0x7fffd58b0608, psys=0x7fffd50dfa08, edit=0x7fffd27e0708)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1398
#6  0x000055555873effe in drw_particle_update_ptcache (object_eval=0x7fffd58b0608, psys=0x7fffd50dfa08)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1422
#7  0x000055555873fbaa in particles_ensure_procedural_data (object=0x7fffd58b0608, psys=0x7fffd50dfa08, md=0x7fffe89fa4c8, r_hair_cache=0x7fffffffd300, subdiv=0,
    thickness_res=2) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1646
#8  0x000055555874631e in drw_shgroup_create_hair_procedural_ex (object=0x7fffd58b0608, psys=0x7fffd50dfa08, md=0x7fffe89fa4c8, hair_pass=0x7fffcdff1080, gpu_mat=0x0,
    gpu_shader=0x7fffd56dec18) at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:138
#9  0x0000555558746993 in DRW_shgroup_hair_create (object=0x7fffd58b0608, psys=0x7fffd50dfa08, md=0x7fffe89fa4c8, hair_pass=0x7fffcdff1080, shader=0x7fffd56dec18)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:235
#10 0x00005555586dc223 in workbench_cache_populate_particles (vedata=0x7fffd583cd08, ob=0x7fffd58b0608)
    at /home/zed/prog/blender/source/blender/draw/engines/workbench/workbench_deferred.c:890
#11 0x00005555586dc391 in workbench_deferred_solid_cache_populate (vedata=0x7fffd583cd08, ob=0x7fffd58b0608)
    at /home/zed/prog/blender/source/blender/draw/engines/workbench/workbench_deferred.c:916
#12 0x00005555586d8da3 in workbench_solid_cache_populate (vedata=0x7fffd583cd08, ob=0x7fffd58b0608)
    at /home/zed/prog/blender/source/blender/draw/engines/workbench/solid_mode.c:52
- 13 0x000055555868659e in drw_engines_cache_populate (ob=0x7fffd58b0608) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:1095
- 14 0x00005555586877fe in DRW_draw_render_loop_ex (depsgraph=0x7fffcde2b408, engine_type=0x55555e02a680 <DRW_engine_viewport_eevee_type>, ar=0x7fffcdecdf08,
    v3d=0x7fffd5551f08, viewport=0x7fffc93fc168, evil_C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:1569
- 15 0x00005555586873ee in DRW_draw_view (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:1490
- 16 0x0000555558bc9e37 in view3d_draw_view (C=0x7fffeec58188, ar=0x7fffcdecdf08) at /home/zed/prog/blender/source/blender/editors/space_view3d/view3d_draw.c:1431
- 17 0x0000555558bc9ee7 in view3d_main_region_draw (C=0x7fffeec58188, ar=0x7fffcdecdf08) at /home/zed/prog/blender/source/blender/editors/space_view3d/view3d_draw.c:1452
- 18 0x0000555558c93dc4 in ED_region_do_draw (C=0x7fffeec58188, ar=0x7fffcdecdf08) at /home/zed/prog/blender/source/blender/editors/screen/area.c:558
#19 0x00005555582166d4 in wm_draw_window_offscreen (C=0x7fffeec58188, win=0x7fffd27e3888, stereo=false)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:596
- 20 0x0000555558216c52 in wm_draw_window (C=0x7fffeec58188, win=0x7fffd27e3888) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:732
- 21 0x000055555821715e in wm_draw_update (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:895
- 22 0x0000555558213108 in WM_main (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:424
- 23 0x0000555557b802c4 in main (argc=1, argv=0x7fffffffe098) at /home/zed/prog/blender/source/creator/creator.c:500
``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555557c84609 in psys_cache_vgroup (mesh=0x0, psys=0x7fffd55e1008, vgroup=2) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2203 2203 MDeformVert *dvert = mesh->dvert; (gdb) bt - 0 0x0000555557c84609 in psys_cache_vgroup (mesh=0x0, psys=0x7fffd55e1008, vgroup=2) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2203 - 1 0x0000555557c84e6a in psys_thread_context_init_path (ctx=0x7fffffffce80, sim=0x7fffffffd090, scene=0x7fffcd350008, cfra=1, editupdate=true, use_render_params=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2345 #2 0x0000555557c867cc in psys_cache_child_paths (sim=0x7fffffffd090, cfra=1, editupdate=true, use_render_params=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:2757 #3 0x0000555557c88c30 in psys_cache_edit_paths (depsgraph=0x7fffcde2b408, scene=0x7fffcd350008, ob=0x7fffd58ad608, edit=0x7fffd27e0708, cfra=1, use_render_params=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/particle.c:3333 #4 0x0000555558ac290e in PE_update_object (depsgraph=0x7fffcde2b408, scene=0x7fffcd350008, ob=0x7fffd58ad608, useflag=0) at /home/zed/prog/blender/source/blender/editors/physics/particle_edit.c:1612 #5 0x000055555873eef8 in drw_particle_update_ptcache_edit (object_eval=0x7fffd58b0608, psys=0x7fffd50dfa08, edit=0x7fffd27e0708) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1398 #6 0x000055555873effe in drw_particle_update_ptcache (object_eval=0x7fffd58b0608, psys=0x7fffd50dfa08) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1422 #7 0x000055555873fbaa in particles_ensure_procedural_data (object=0x7fffd58b0608, psys=0x7fffd50dfa08, md=0x7fffe89fa4c8, r_hair_cache=0x7fffffffd300, subdiv=0, thickness_res=2) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_particles.c:1646 #8 0x000055555874631e in drw_shgroup_create_hair_procedural_ex (object=0x7fffd58b0608, psys=0x7fffd50dfa08, md=0x7fffe89fa4c8, hair_pass=0x7fffcdff1080, gpu_mat=0x0, gpu_shader=0x7fffd56dec18) at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:138 #9 0x0000555558746993 in DRW_shgroup_hair_create (object=0x7fffd58b0608, psys=0x7fffd50dfa08, md=0x7fffe89fa4c8, hair_pass=0x7fffcdff1080, shader=0x7fffd56dec18) at /home/zed/prog/blender/source/blender/draw/intern/draw_hair.c:235 #10 0x00005555586dc223 in workbench_cache_populate_particles (vedata=0x7fffd583cd08, ob=0x7fffd58b0608) at /home/zed/prog/blender/source/blender/draw/engines/workbench/workbench_deferred.c:890 #11 0x00005555586dc391 in workbench_deferred_solid_cache_populate (vedata=0x7fffd583cd08, ob=0x7fffd58b0608) at /home/zed/prog/blender/source/blender/draw/engines/workbench/workbench_deferred.c:916 #12 0x00005555586d8da3 in workbench_solid_cache_populate (vedata=0x7fffd583cd08, ob=0x7fffd58b0608) at /home/zed/prog/blender/source/blender/draw/engines/workbench/solid_mode.c:52 - 13 0x000055555868659e in drw_engines_cache_populate (ob=0x7fffd58b0608) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:1095 - 14 0x00005555586877fe in DRW_draw_render_loop_ex (depsgraph=0x7fffcde2b408, engine_type=0x55555e02a680 <DRW_engine_viewport_eevee_type>, ar=0x7fffcdecdf08, v3d=0x7fffd5551f08, viewport=0x7fffc93fc168, evil_C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:1569 - 15 0x00005555586873ee in DRW_draw_view (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/draw/intern/draw_manager.c:1490 - 16 0x0000555558bc9e37 in view3d_draw_view (C=0x7fffeec58188, ar=0x7fffcdecdf08) at /home/zed/prog/blender/source/blender/editors/space_view3d/view3d_draw.c:1431 - 17 0x0000555558bc9ee7 in view3d_main_region_draw (C=0x7fffeec58188, ar=0x7fffcdecdf08) at /home/zed/prog/blender/source/blender/editors/space_view3d/view3d_draw.c:1452 - 18 0x0000555558c93dc4 in ED_region_do_draw (C=0x7fffeec58188, ar=0x7fffcdecdf08) at /home/zed/prog/blender/source/blender/editors/screen/area.c:558 #19 0x00005555582166d4 in wm_draw_window_offscreen (C=0x7fffeec58188, win=0x7fffd27e3888, stereo=false) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:596 - 20 0x0000555558216c52 in wm_draw_window (C=0x7fffeec58188, win=0x7fffd27e3888) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:732 - 21 0x000055555821715e in wm_draw_update (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:895 - 22 0x0000555558213108 in WM_main (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:424 - 23 0x0000555557b802c4 in main (argc=1, argv=0x7fffffffe098) at /home/zed/prog/blender/source/creator/creator.c:500 ```

Added subscribers: @pancake_hunter, @Sergey

Added subscribers: @pancake_hunter, @Sergey

This issue was referenced by 7ba096e1e7

This issue was referenced by 7ba096e1e72d99c2c43986cf009b14dfbea539a4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63788
No description provided.