source/blender/editors/physics/particle_edit.c
@@ -97,23 +97,38 @@ bool PE_poll(bContext *C)
   Object *ob = CTX_data_active_object(C);
 
   if (!scene || !ob || !(ob->mode & OB_MODE_PARTICLE_EDIT)) {
-    return 0;
+    return false;
   }
-  return (PE_get_current(scene, ob) != NULL);
+
+  PTCacheEdit *edit = PE_get_current(scene, ob);
+  if (edit == NULL) {
+    return false;
+  }
+  if (edit->psmd_eval == NULL || edit->psmd_eval->mesh_final == NULL) {
+    return false;
+  }
+
+  return true;
 }
 
 bool PE_hair_poll(bContext *C)
 {
   Scene *scene = CTX_data_scene(C);
   Object *ob = CTX_data_active_object(C);
-  PTCacheEdit *edit;
 
   if (!scene || !ob || !(ob->mode & OB_MODE_PARTICLE_EDIT)) {
-    return 0;
+    return false;
   }
-  edit = PE_get_current(scene, ob);
 
-  return (edit && edit->psys);
+  PTCacheEdit *edit = PE_get_current(scene, ob);
+  if (edit == NULL || edit->psys == NULL) {
+    return false;
+  }
+  if (edit->psmd_eval == NULL || edit->psmd_eval->mesh_final == NULL) {
+    return false;
+  }
+
+  return true;
 }
 
 bool PE_poll_view3d(bContext *C)
@@ -1085,7 +1100,7 @@ static void PE_apply_mirror(Object *ob, ParticleSystem *psys)
   edit = psys->edit;
   psmd_eval = edit->psmd_eval;
 
-  if (!psmd_eval->mesh_final) {
+  if (psmd_eval == NULL || psmd_eval->mesh_final == NULL) {
     return;
   }
 
@@ -1217,7 +1232,7 @@ static void pe_deflect_emitter(Scene *scene, Object *ob, PTCacheEdit *edit)
 
   psys = edit->psys;
 
-  if (!edit->psmd_eval->mesh_final) {
+  if (edit->psmd_eval == NULL || edit->psmd_eval->mesh_final == NULL) {
     return;
   }
 
@@ -1489,7 +1504,7 @@ void update_world_cos(Depsgraph *UNUSED(depsgraph), Object *ob, PTCacheEdit *edi
   KEY_K;
   float hairmat[4][4];
 
-  if (psys == 0 || psys->edit == 0 || psmd_eval->mesh_final == NULL) {
+  if (psys == 0 || psys->edit == 0 || psmd_eval == NULL || psmd_eval->mesh_final == NULL) {
     return;
   }
 
